[package]
name = "rudi"
version = "0.1.0"
edition = "2021"

[dependencies]
async-broadcast = "0.7.1"
bytes = "1.5.0"
serial_test = "2.0.0"
socket2 = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.35.0", features = ["full", "net", "sync"] }

[dev-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
rstest = "0.18.2"
